--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.0",
-    "mongoose": "^8.8.4"
+    "mongoose": "^8.8.4",
+    "morgan": "^1.10.0"
   }
 }
